Modulo 3 70% plasmado sin animación

--- a/src/app/pages/page/modulo2/modulo2.component.html
+++ b/src/app/pages/page/modulo2/modulo2.component.html
@@ -98,15 +98,13 @@
           <img src="assets/img-modulo2/4.svg" alt="" class="backInLeft-element" (window:scroll)="onScrollBackInLeft()">
         </div>
         <div class=" col-12 col-md-6">
-          <img src="assets/img-modulo2/5.svg" alt="" class="backInRight-element"
-            (window:scroll)="onScrollBackInRight()">
+          <img src="assets/img-modulo2/5.svg" alt="" class="backInRight-element">
         </div>
         <div class="col-12 col-md-6">
           <img src="assets/img-modulo2/1.svg" alt="" class="backInLeft-element" (window:scroll)="onScrollBackInLeft()">
         </div>
         <div class=" col-12 col-md-6">
-          <img src="assets/img-modulo2/3.svg" alt="" class="backInRight-element"
-            (window:scroll)="onScrollBackInRight()">
+          <img src="assets/img-modulo2/3.svg" alt="" class="backInRight-element">
         </div>
       </div>
 
