--- a/src/app/pages/page/modulo3/modulo3.component.html
+++ b/src/app/pages/page/modulo3/modulo3.component.html
@@ -1,1 +1,402 @@
-<app-retro-act3></app-retro-act3>
+<div class="modulo3">
+
+  <section class="inicio-m3 d-flex">
+    <div class="container">
+      <h1 class="title">Módulo 3</h1>
+      <img src="assets/img-modulo3/cooperativas 2.svg" class="subtitle" alt="">
+    </div>
+  </section>
+
+
+  <section class="objetivo-general">
+    <div class="container">
+      <div class="row justify-content-center align-items-center mb-5">
+        <div class="col-12 col-md-6 d-flex justify-content-center mb-4">
+          <img class="obj-gen-img" src="assets/img-modulo3/objetivo-general.svg" alt="">
+        </div>
+        <div class="col-12 col-md-6 pt-5 d-flex justify-content-center">
+          <img src="assets/img-modulo3/og-engranajes.svg" alt="">
+        </div>
+      </div>
+
+      <div class="ms-md-5 pt-5 text-center text-md-start">
+        <h2>TEMA</h2>
+        <ul>
+          <li>• Elementos que las integran</li>
+          <li>• Legislación y estructura</li>
+          <li>• La Asamblea General</li>
+          <li>• Actividad: completa el mapa conceptual</li>
+          <li>• Gobierno Corporativo: Consejo de Administración</li>
+          <li>• Gobierno Corporativo: Consejo de Vigilancia</li>
+          <li>• Gobierno Corporativo: Dirección General</li>
+          <li>• Retroalimentación</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="introduccion">
+    <div class="container">
+      <div class="hoja-circulo">
+        <div class="row justify-content-center">
+
+          <img class="d-none d-md-block" src="assets/img-modulo3/intro-monedas.svg" alt="">
+
+          <h2>INTRODUCCIÓN</h2>
+          <p>
+            Las Sociedades Cooperativas tienen una
+            participación importante y creciente
+            alrededor del nuestro país, generan
+            empleo, ingresos, educación financiera y
+            en su afán de generar economías
+            saludables entre sus asociados, ayudan a
+            que todo lo generado en la Institución, se
+            reparta de la manera más justa en servicios,
+            beneficios y promociones.
+            Con base en la Ley General de Sociedades
+            Cooperativa se reconocen 3 tipos:
+            1. De consumidores y/o servicios
+            2. De productores de bienes y/o servicios
+            3. De ahorro y préstamo
+            Caja Popular San Pablo, es una Sociedad
+            Cooperativa de Ahorro y Préstamo, que se
+            rige por la Ley General de Sociedades
+            Cooperativas (LGSC) y en específico para
+            este sector la Ley para Regular las
+            Actividades de las Sociedades
+            Cooperativas de Ahorro y Préstamo
+            (LRASCAP) normando su funcionamiento y
+            velando por los derechos de los Socios.
+          </p>
+        </div>
+
+
+      </div>
+    </div>
+  </section>
+
+
+  <section class="elementos-sociedad-cooperativa">
+    <div class="container">
+      <div class="bg-so-coops">
+        <img src="assets/img-modulo3/og-engranajes.svg" alt="">
+      </div>
+    </div>
+  </section>
+
+  <section class="legislacion-socaps">
+    <div class="container">
+
+      <h2>LEGISLACIÓN DE LAS SOCIEDADES
+        COOPERATIVAS DE AHORRO Y PRESTAMO
+        EN MÉXICO</h2>
+      <p>
+        El H. Congreso de la Unión reconoció que las Sociedades Cooperativas de Ahorro
+        y Préstamo (SOCAP) y las Sociedades Financieras Populares (SOFIPOS), tienen
+        naturaleza y fines distintos, por lo que su marco legal también es diferente.
+        Partiendo de lo anterior, dentro del marco regulatorio de las SOCAPS, donde se
+        encuentra nuestra Cooperativa, se presenta la siguiente información:
+      </p>
+
+      <div class="tabla">
+        <!-- creame una tabla en html -->
+        <table>
+          <thead>
+            <tr class="text-center">
+              <th scope="col">NOMBRE
+                <hr class="d-none d-lg-block">
+              </th>
+              <th scope="col">CONTEXTO DEL MARCO LEGAL
+                <hr>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><img src="assets/img-modulo3/tabla-t-1.svg" alt=""></td>
+              <td>Tiene por objeto regular la constitución,
+                organización, funcionamiento y extinción
+                de las Sociedades Cooperativas, así como
+                Organismos en que libremente se agrupen,
+                de igual forma los derechos de los Socios.<br><br>
+                Además, ésta establece que, a partir del
+                momento de la firma de su acta
+                constitutiva, las Sociedades Cooperativas
+                contarán con personalidad jurídica,
+                tendrán patrimonio propio y podrán
+                celebrar actos y contratos, así como
+                asociarse libremente con otras para la
+                consecución de su objeto social.<br><br>
+                Esta ley establece la naturaleza y forma
+                Corporativa de las SOCAP´S.
+                <hr>
+              </td>
+            </tr>
+            <tr>
+              <td><img src="assets/img-modulo3/tabla-t-2.svg" alt=""></td>
+              <td>En 2009, el Congreso General de los
+                Estados Unidos Mexicanos expidió la Ley
+                para Regular las Actividades de las
+                Sociedades Cooperativas de Ahorro y
+                Préstamo (LRASCAP), reconociéndose de
+                acuerdo a lo establecido en nuestra Carta
+                Magna a las Sociedades Cooperativas de
+                Ahorro y Préstamo como integrantes del
+                sector social de la economía.<br><br>
+                Este ordenamiento regula las operaciones
+                de las Sociedades Cooperativas de Ahorro
+                y Préstamo (SOCAP), protegiendo los
+                intereses de sus Socios ahorradores y
+                establece los términos en que serán
+                supervisadas y reguladas.
+                <hr>
+              </td>
+            </tr>
+            <tr>
+              <td><img src="assets/img-modulo3/tabla-t-3.svg" alt=""></td>
+              <td>Regulación prudencial y criterios contables
+                que deberán adoptar las SOCAP´S con la
+                finalidad de preservar su liquidez, solvencia
+                y estabilidad.<br><br>
+                Esta regulación está definida en función de
+                las actividades, operaciones, productos y
+                total de activos.
+                <hr>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="row mt-4">
+        <div class="col-12 col-md-6 mb-4">
+          <img src="assets/img-modulo3/legsocoops-img.svg" alt="">
+        </div>
+        <div class="col-12 col-md-6">
+          <img src="assets/img-modulo3/legsocoops-img2.svg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="estructura-socoops">
+
+    <div class="container">
+      <div class="hoja-inclinada">
+        <img src="assets/img-modulo3/estrucutra-socoops.svg" alt="">
+        <p>La estructura de la administración y la organización de las Sociedades Cooperativas de Ahorro
+          y Préstamo se establece sobre sus Órganos de Gobierno, donde los Socios integrantes cumplen
+          funciones y roles importantes.<br><br>
+          De manera general, la dirección, administración y vigilancia interna de las Sociedades
+          Cooperativas, estará a cargo de los Órganos siguientes:</p>
+        <img src="assets/img-modulo3/etiquetas.svg" alt="">
+        <img src="assets/img-modulo3/diagrama-mano.svg" alt="">
+      </div>
+
+    </div>
+
+  </section>
+
+  <section class="asamblea-general">
+    <div class="container">
+      <div class="hoja-top">
+
+        <img src="assets/img-modulo3/titulo-asable-general.svg" alt="">
+
+        <div class="row">
+
+          <div class="col-12">
+            <p class="intro">La Asamblea General es el órgano supremo en las Sociedades Cooperativas de Ahorro y
+              Préstamo. Se integra por los mismos Socios y que funciona bajo los principios de voz y mayoría
+              de votos para la toma de las decisiones más importantes de estas, sus acuerdos obligan a
+              todos los Socios, presentes, ausentes y disidentes a cumplirlos, siempre que se hubieren tomado
+              conforme a la al marco legal vigente y las Bases Constitutivas de cada Entidad.
+              Conforme a lo establecido en la Ley General de Sociedades Cooperativas, existen dos tipos de
+              Asambleas Generales: Ordinarias y Extraordinarias.</p>
+          </div>
+
+          <div class="col-12 col-md-8">
+            <div class="block verde">
+              Las instancias que podrán convocar a una Asamblea
+              General Ordinaria o Extraordinaria son: <br><br>
+              <ul>
+                <li>I. Consejo de Administración.</li>
+                <li>II. Consejo de Vigilancia, cuando haya omisión de
+                  convocatoria por parte del Consejo de
+                  Administración.</li>
+                <li>III. El 20% del total de los Socios.</li>
+                <li>IV. Las Asambleas Generales Ordinarias o
+                  Extraordinarias, deberán ser convocadas por lo
+                  menos con 7 días naturales de anticipación y la
+                  convocatoria deberá contener el orden del día,
+                  además del lugar, fecha y hora dónde se
+                  celebrará, así como el tipo de Asamblea y podrá
+                  ser difundida: mediante avisos en algún lugar visible
+                  del domicilio social, a través de un periódico de
+                  amplia circulación del domicilio social o también
+                  convocando directamente y por escrito a cada
+                  Socio.</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-4">
+            <img src="assets/img-modulo3/voto.svg" alt="">
+          </div>
+          <div class="col-12">
+            <div class="block azul">
+              <p>A continuación, procederemos a mencionar algunas de las características y diferencias
+                más significativas que presentan las Asambleas Generales Ordinarias y Extraordinarias, en
+                las Sociedades Cooperativas de Ahorro y Préstamo:</p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="block azul">
+              <h3>Asamblea General Ordinaria:</h3>
+              <ul>
+                <li> Se celebrará dentro de los primeros
+                  90 días naturales de cada año.</li>
+                <li> Su quórum legal para integrarse
+                  será de la mitad más uno del total
+                  de Socios convocados.</li>
+                <li> Las resoluciones se tienen por
+                  válidas, cuando votan a su favor la
+                  mayoría de los Socios presentes
+                  (cincuenta más uno).</li>
+                <li> Resolverá todos los negocios y
+                  problemas de importancia para la
+                  Sociedad y establecerá las reglas
+                  generales que deben normar el
+                  funcionamiento social. Además de
+                  las facultades que le conceden la
+                  LGSC y las Bases Constitutivas.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="block verde">
+              <h3>Asamblea General Extraordinaria:</h3>
+              <ul>
+                <li> Se celebrará en cualquier tiempo
+                  para resolver cuestiones que por
+                  su importancia y trascendencia lo
+                  requieran.</li>
+                <li> Su quórum legal para integrarse
+                  será de la mitad más uno del total
+                  de socios convocados.</li>
+                <li> Las resoluciones se tienen por
+                  válidas, cuando votan a su favor
+                  la mayoría de los Socios
+                  presentes.</li>
+              </ul>
+            </div>
+            <img src="assets/img-modulo3/voto-cinta.svg" alt="">
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="consejo-administracion py-5">
+    <div class="container">
+      <div class="hoja-right">
+        <h1>GOBIERNO CORPORATIVO:
+          CONSEJO DE ADMINISTRACIÓN
+        </h1>
+        <div class="container">
+
+          <p>
+            El Consejo de Administración es el Órgano Ejecutivo de la Asamblea General que tendrá
+            la representación de la Sociedad Cooperativa. <br><br>
+            De acuerdo a lo establecido en la Ley General de Sociedades Cooperativas, el
+            nombramiento de los miembros del Consejo de Administración, lo realiza la Asamblea
+            General de Socios. <br><br>
+            Las Bases Constitutivas de la Sociedad Cooperativa deberán establecer un sistema de
+            renovación cíclica y parcial de sus integrantes, ello con el propósito de garantizar la
+            continuidad en los procesos de toma de decisiones del Consejo de Administración.<br><br>
+            Las facultades y obligaciones indelegables del Consejo de Administración son establecer
+            las políticas generales de administración de la Sociedad Cooperativa, acordar la
+            creación de los Comités que sean necesarios para el correcto desarrollo de las
+            operaciones de la Sociedad Cooperativa y autorizar los reglamentos que propongan los
+            comités respectivos y los que el propio Consejo determine. También, instruir la
+            elaboración y aprobar los manuales de administración y operación, así como los
+            programas de actividades.<br><br>
+            Además, autorizar las operaciones que, de acuerdo a las bases constitutivas de la
+            Sociedad Cooperativa y por su monto o importancia, necesiten de tal autorización.
+          </p>
+
+          <img src="assets/img-modulo3/six-img.svg" alt="">
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="consejo-vigilacion">
+    <div class="container">
+      <div class="hoja-right">
+        <h1>GOBIERNO CORPORATIVO:
+          CONSEJO DE ADMINISTRACIÓN
+        </h1>
+        <div class="container">
+          <p>
+            El Consejo de Vigilancia es el órgano encargado de supervisar el funcionamiento interno
+            de la Sociedad Cooperativa, así como el cumplimiento de sus estatutos y demás
+            normatividad que le es aplicable. <br><br>
+            De acuerdo a lo establecido en la Ley General de Sociedades Cooperativas, el
+            nombramiento de los miembros del Consejo de Vigilancia lo realiza la Asamblea General
+            de Socios serán nombradas y en su caso removidas por la Asamblea General.<br><br>
+            Las Bases Constitutivas de la Sociedad Cooperativa deberán establecer un sistema de
+            renovación cíclica y parcial de sus integrantes, ello con el propósito de garantizar la
+            continuidad en los procesos de toma de decisiones del Consejo de Vigilancia.<br><br>
+            De las facultades y obligaciones indelegables del Consejo de Vigilancia son asistir con
+            voz, pero sin voto a las sesiones del Consejo de Administración, solicitar al Consejo de
+            Administración, al Director o Gerente General, a los Comités de la Cooperativa, la
+            información que requiera para el correcto desempeño de sus funciones. Además,
+            solicitar al auditor externo la información sobre el desarrollo y resultados de la auditoria y
+            convocar a Asamblea Ordinaria y/o Extraordinaria a falta de convocatoria expedida por
+            el Consejo de Administración.<br><br>
+            También, emitir la opinión para nombrar al Director o Gerente General y acordar su
+            remoción y vigilar que los actos y decisiones de todos los órganos de la Cooperativa se
+            realicen con apego a la normatividad aplicable.<br><br>
+            Por lo tanto, El Consejo de Vigilancia es el Órgano encargado de velar por el correcto
+            funcionamiento de la Cooperativa y por el cumplimiento de las normas y reglas
+            establecidas.
+          </p>
+          <img src="assets/img-modulo3/two-img.svg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="director-gerente-general asamblea-general">
+
+    <div class="container">
+      <div class="hoja-top">
+          <h1>GOBIERNO CORPORATIVO:
+            CONSEJO DE ADMINISTRACIÓN
+          </h1>
+          <p>El Director o Gerente General es la persona contratada por el Consejo de Administración
+            para que en forma profesional y especializada ejecute los acuerdos tomados por este
+            órgano de gobierno y la Asamblea, así como los planes y estrategias de la Sociedad. <br><br>
+            El Director o Gerente General de las Sociedades Cooperativas de Ahorro y Préstamo,
+            deberá contar con conocimientos básicos en materia financiera y administrativa, que la
+            propia Sociedad Cooperativa establezca en sus bases constitutivas.<br><br>
+            No debe tener parentesco por consanguinidad hasta el primer grado, afinidad hasta el
+            segundo grado, o civil con alguno de los miembros del Consejo de Administración o de
+            Vigilancia de la Cooperativa.<br><br>
+            También, asistir, con voz, pero sin voto, a las sesiones del Consejo de Administración y de los
+            comités de la Cooperativa, representar a la Cooperativa en los actos que determinen las
+            Bases Constitutivas</p>
+
+            <img src="assets/img-modulo3/two-img-fin.svg" alt="">
+        </div>
+      </div>
+
+  </section>
+
+  <app-retro-act3></app-retro-act3>
+</div>
