Modulo 4 iniciado, modulo 3 le falta animacion

--- a/src/app/pages/page/main/main.component.html
+++ b/src/app/pages/page/main/main.component.html
@@ -66,6 +66,18 @@
       </div>
     </div>
 
+    <div class="cards">
+      <div class="imgbox d-flex justify-content-center align-items-center">
+        <i class="fa-solid fa-people-group"></i>
+      </div>
+
+      <div class="content">
+        <h3 class="modulo-title">MÓDULO 4</h3>
+        <p>Cooperativas 2</p>
+        <a routerLink="/inicio/modulo-cuatro" style="margin-top: 40px;">Ver Módulo</a>
+      </div>
+    </div>
+
   </div>
 </section>
 <!--END CARDS MODULOS-->
